# wingfoil

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust-clippy.yml
src/: graph.rs  lib.rs  types.rs
src/channel/: kanal_chan.rs  mod.rs
src/nodes/: async_io.rs  channel.rs  graph_node.rs  merge.rs
