[package]
name = "wingfoil"
version = "0.1.4"
authors = ["wingfoil@wingfoil.io"]
edition = "2024"
publish = ["wingfoil", "crates-io"]
license = "Apache-2.0"
keywords = ["graph", "stream", "dag", "hft", "trading", "ai"]
homepage = "https://github.com/wingfoil-io/wingfoil/"
documentation = "https://docs.rs/wingfoil"
description = "graph based stream processing framework"

[lib]
name="wingfoil"
[package.metadata.docs.rs]
[[bench]]
name = "graph"
harness = false
[[bench]]
name = "nanotime"
harness = false
[profile.release]
opt-level = 3       # Options: 0, 1, 2, 3, "s" (size), "z" (min size), 3 is max speed
debug = false           # Include debug info for profiling (perf, hotspot)
lto = "fat"            # Link Time Optimization (fat = max optimization)
codegen-units = 1      # Single codegen unit = better optimizations
panic = "abort"        # Smaller binary + faster panics
overflow-checks = false # Disable integer overflow checks for speed
[dev-dependencies]
[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
priority-queue = "1.2.0"
log = "0.4.0"
env_logger = "0.9.0"
itertools = "0.10.1"
chrono = "0.4.19"
num = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.1"
num-traits = "0.2"
derive-new = "0.7"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
smallvec = "1.10.0"
lazy_static = "1.4.0"
tynm = "0.1.7"
kanal = "0.1.1"
scopeguard = "1.2.0"
async-stream = "0.3.6"
formato = "0.3.0"
once_cell = "1.21.3"
futures-util = "0.3.31"
anyhow = "1.0.98"
tinyvec = { version = "1.9.0", features = ["alloc"] }
criterion = {version = "0.7.0", features = ["async_tokio"]}
quanta = "0.9.0"
